test/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
        app: test
spec:
  selector:
    app: test
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  type: ClusterIP
  ports:
    - name: app
      protocol: TCP
      port: 80
      targetPort: 80
